Correcciones en skf